# logmile

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
backend/config/: settings.py  urls.py
backend/trips/: constants.py  eld_pdf.py  exceptions.py  hos_engine.py  map_service.py  serializers.py  throttles.py  types.py  urls.py  utils.py  views.py
backend/trips/hos/: __init__.py  constants.py  helpers.py  models.py  planner.py
backend/trips/maps/: __init__.py  cache.py  client.py  constants.py  errors.py  geometry.py  service.py
backend/trips/services/: trip_planner.py
backend/trips/tests/: test_deployment_guards.py  test_exceptions.py  test_hos_engine.py  test_map_geometry.py  test_map_service.py  test_serializers.py  test_settings.py  test_trip_planner_service.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: locationApi.ts  tripApi.ts
frontend/src/components/: EldLogSheet.tsx  LocationAutocompleteField.tsx  MetricSummary.tsx  RouteMap.tsx  StopTimeline.tsx  TripForm.tsx  TripStartField.tsx  TripSummaryPanel.tsx
frontend/src/constants/: eld.ts  location.ts  map.ts  trip.ts  ui.ts
frontend/src/hooks/: useLocationSuggestions.ts  useToasts.ts
frontend/src/types/: trip.ts  ui.ts
frontend/src/utils/: datetime.ts  eld.ts  errors.ts  formatters.ts  http.ts  location.ts  map.ts  trip.ts  tripValidation.ts
(+3 files in other folders)
